# coursework_django

./: .env.sample  README.md  groups.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
message/: admin.py  forms.py  models.py  services.py  urls.py  views.py
message/management/commands/: send_mailings.py
message/migrations/: 0001_initial.py  0002_sms_alter_client_comment_alter_client_email_and_more.py  0003_alter_mail_client_alter_mail_end_sending_and_more.py  0004_alter_send_options_alter_mail_status_and_more.py  0005_client_owner_mail_owner_sms_owner.py  0006_alter_client_options_alter_mail_options_and_more.py  0007_client_is_active_mail_is_active.py  0008_alter_client_options_alter_mail_options_and_more.py  0009_log.py  0010_delete_log.py  0011_alter_mail_options.py  0012_alter_client_options_alter_mail_options_and_more.py  0013_send_owner.py  0014_alter_send_status.py  0015_alter_send_options.py
message/templates/message/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  mail_confirm_delete.html  mail_detail.html  mail_form.html  mail_list.html  main.html  message.html  send_form.html  send_list.html  sms_confirm_delete.html  sms_detail.html  sms_form.html  sms_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_options.py
users/templates/: login.html
users/templates/users/: user_confirm_delete.html  user_detail.html  user_form.html  user_list.html  (+2 more)
(+2 files in other folders)
